[package]
name = "bom-buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive"] }
etcetera = "0.8.0"
figment = { version = "0.10.12", features = ["yaml", "env"] }
inquire = "0.6.2"
once_cell = "1.18.0"
rusqlite = { version = "0.29.0", features = ["serde_json", "bundled", "trace"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
strum_macros = "0.25.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
ureq = { version = "2.8.0", features = ["json"] }

[profile.release]
opt-level = 3
strip = true
