[package]
name = "bom-buddy"
version = "0.1.1"
authors = ["sublipri"]
edition = "2021"
license = "GPL-3.0-only"
description = "Australian weather CLI utility"
repository = "https://github.com/sublipri/bom-buddy"
keywords = ["weather", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1.0.75"
apng = "0.3.1"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.7", features = ["derive"] }
comfy-table = "7.1.0"
dbase = { version = "0.4.0", features = ["serde"] }
edit = "0.1.5"
etcetera = "0.8.0"
figment = { version = "0.10.12", features = ["yaml", "env"] }
geo = "0.27.0"
image = { version = "0.24.7", default-features = false, features = ["png"] }
inquire = "0.6.2"
mpvipc = "1.3.0"
once_cell = "1.18.0"
png = "0.17.10"
rusqlite = { version = "0.29.0", features = ["serde_json", "bundled", "trace"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_with = { version = "3.4.0", features = ["chrono_0_4"] }
serde_yaml = "0.9.27"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
strum_macros = "0.25.3"
suppaftp = "5.2.2"
tempfile = "3.9.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-journald = "0.3.0"
tracing-subscriber = "0.3.17"
ureq = { version = "2.8.0", features = ["json"] }

[profile.release]
opt-level = 3
strip = true

[profile.dev.package."*"]
opt-level = 3
